Tue Jun  6 20:02:18 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/OS.h:
        * ace/OS.i:
        * ace/OS_TLI.cpp:
        * ace/OS_TLI.h:
        * ace/OS_TLI.inl:
        * ace/config-all.h:
        * ace/Makefile:
        * ace/Makefile.am:
        * ace/Makefile.bor:
        * ace/ace-dll.icc:
        * ace/ace-lib.icc:
        * ace/ace.icc:
        * ace/ace_dll.dsp:
        * ace/ace_lib.dsp:
          Moved the TLI wrappers to ACE_OS_TLI.

Tue Jun  6 17:57:14 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

        * examples/QOS/server.cpp:
        * examples/QOS/client.cpp:
          Changed these to reflect changes to the ACE QoS API.

Tue Jun 06 15:44:03 2000  David L. Levine  <levine@cs.wustl.edu>

        * ace/config-lynxos.h: added support for LynxOS 3.1.0.
          It uses ACE_HAS_PTHREADS_STD instead of ACE_HAS_PTHREADS_DRAFT4 +
          ACE_HAS_STDARG_THR_DEST.  Thanks to Dorr H. Clark
          <dhclark@Lynx.COM> for reporting this.

Tue Jun  6 12:39:23 2000  Phil Mesnier  <mesnier_p@ociweb.com>

        Ported ACE & TAO to Unixware 7.1, using GNU C++ compiler gcc 2.95.2.
        See ACE-INSTALL for specific information on configuring the build
        environment.

        * ACE-INSTALL.html
        * ace/OS.h
        * ace/config-unixware-7.1.0.h
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp
        * examples/Threads/tss1.cpp
        * include/makeinclude/platform_unixware_g++.GNU
        * include/makeinclude/wrapper_macros.GNU

Tue Jun  6 10:32:51 2000  Edan Ayal <edanayal@yahoo.com>

        * ace/Message_Queue.h: Added the following two pure
          virtual methods to class 'ACE_Message_Queue_Base':

          virtual ACE_Notification_Strategy *notification_strategy (void) = 0;
          virtual void notification_strategy (ACE_Notification_Strategy *s) = 0;
          virtual int peek_dequeue_head (ACE_Message_Block *&first_item,
                                         ACE_Time_Value *timeout = 0);
